[gd_scene load_steps=66 format=3 uid="uid://detynhaayvji4"]

[ext_resource type="Script" path="res://skeleton.gd" id="1_d56fl"]
[ext_resource type="Texture2D" uid="uid://brc8opc3xtur4" path="res://assets/sprites/Sprite Pack 6/3 - Skeleton/Bone_Pile (32 x 32).png" id="1_sh88d"]
[ext_resource type="Texture2D" uid="uid://bbu1dine2i861" path="res://assets/sprites/Sprite Pack 6/3 - Skeleton/Bone_Pile_Wakeup (32 x 32).png" id="2_d56fl"]
[ext_resource type="AudioStream" uid="uid://bv8w2c6bwr2nv" path="res://assets/audio/skeleton-throw.wav" id="2_pyp1f"]
[ext_resource type="Texture2D" uid="uid://cwb05omqt1o01" path="res://assets/sprites/Sprite Pack 6/3 - Skeleton/Bone_Toss (32 x 32).png" id="3_obgqe"]
[ext_resource type="Texture2D" uid="uid://bu36aqtrg7w71" path="res://assets/sprites/Sprite Pack 6/3 - Skeleton/Crumbling_Into_Bone_Pile (32 x 32).png" id="4_pyp1f"]
[ext_resource type="Texture2D" uid="uid://jurv108vuyd5" path="res://assets/sprites/Sprite Pack 6/3 - Skeleton/Hurt (32 x 32).png" id="5_4ixog"]
[ext_resource type="Texture2D" uid="uid://byfpekvv7t1pf" path="res://assets/sprites/Sprite Pack 6/3 - Skeleton/Inactive (32 x 32).png" id="6_gku70"]
[ext_resource type="Texture2D" uid="uid://dkk8tc1uurabr" path="res://assets/sprites/Sprite Pack 6/3 - Skeleton/Jumping (32 x 32).png" id="7_c6pi8"]
[ext_resource type="Texture2D" uid="uid://u5q2rit0lvq6" path="res://assets/sprites/Sprite Pack 6/3 - Skeleton/Landed (32 x 32).png" id="8_qv3qp"]
[ext_resource type="Texture2D" uid="uid://btgrruv2u7nv4" path="res://assets/sprites/Sprite Pack 6/3 - Skeleton/Limping_Movement (32 x 32).png" id="9_yvw1e"]
[ext_resource type="Texture2D" uid="uid://0rbl8fd78jv1" path="res://assets/sprites/Sprite Pack 6/3 - Skeleton/Preparing_Jump (32 x 32).png" id="10_iyyii"]
[ext_resource type="Texture2D" uid="uid://bwwkwmnl1drub" path="res://assets/sprites/Sprite Pack 6/3 - Skeleton/Standing (32 x 32).png" id="11_nnwmq"]
[ext_resource type="Texture2D" uid="uid://cjps2vxmdtot2" path="res://assets/sprites/Sprite Pack 6/3 - Skeleton/Standing_Idle (32 x 32).png" id="12_y4d17"]
[ext_resource type="Texture2D" uid="uid://bibxukvagqg7k" path="res://assets/sprites/Sprite Pack 6/3 - Skeleton/Twitching_Idle (32 x 32).png" id="13_26xvq"]
[ext_resource type="AudioStream" uid="uid://ddcibgb8f7t2p" path="res://assets/audio/skeleton-death.mp3" id="15_obgqe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7wgj3"]
atlas = ExtResource("2_d56fl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg42q"]
atlas = ExtResource("2_d56fl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vgq1"]
atlas = ExtResource("2_d56fl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3r4y"]
atlas = ExtResource("2_d56fl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmq2e"]
atlas = ExtResource("2_d56fl")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_srww6"]
atlas = ExtResource("2_d56fl")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0cfw"]
atlas = ExtResource("2_d56fl")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nrdo"]
atlas = ExtResource("3_obgqe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g15cv"]
atlas = ExtResource("3_obgqe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkdin"]
atlas = ExtResource("3_obgqe")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8abc2"]
atlas = ExtResource("3_obgqe")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt6ae"]
atlas = ExtResource("3_obgqe")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogqsf"]
atlas = ExtResource("4_pyp1f")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgdo7"]
atlas = ExtResource("4_pyp1f")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_egyty"]
atlas = ExtResource("4_pyp1f")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymf2"]
atlas = ExtResource("4_pyp1f")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_prq5y"]
atlas = ExtResource("4_pyp1f")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n48qw"]
atlas = ExtResource("4_pyp1f")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8xwd"]
atlas = ExtResource("4_pyp1f")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpjx5"]
atlas = ExtResource("5_4ixog")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gksni"]
atlas = ExtResource("5_4ixog")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpwgi"]
atlas = ExtResource("8_qv3qp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bbc0"]
atlas = ExtResource("8_qv3qp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd8rl"]
atlas = ExtResource("9_yvw1e")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdklg"]
atlas = ExtResource("9_yvw1e")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dfin"]
atlas = ExtResource("9_yvw1e")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3k85"]
atlas = ExtResource("9_yvw1e")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qldq4"]
atlas = ExtResource("9_yvw1e")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_abw3f"]
atlas = ExtResource("9_yvw1e")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61cp4"]
atlas = ExtResource("10_iyyii")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7q35"]
atlas = ExtResource("10_iyyii")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwspo"]
atlas = ExtResource("10_iyyii")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lux7a"]
atlas = ExtResource("12_y4d17")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmt0f"]
atlas = ExtResource("12_y4d17")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31dwy"]
atlas = ExtResource("12_y4d17")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jie8x"]
atlas = ExtResource("12_y4d17")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcrbp"]
atlas = ExtResource("12_y4d17")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1gsl"]
atlas = ExtResource("12_y4d17")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m76hx"]
atlas = ExtResource("12_y4d17")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5k40"]
atlas = ExtResource("12_y4d17")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6dtu"]
atlas = ExtResource("12_y4d17")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssyro"]
atlas = ExtResource("13_26xvq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha5y6"]
atlas = ExtResource("13_26xvq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82yh0"]
atlas = ExtResource("13_26xvq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rsg7"]
atlas = ExtResource("13_26xvq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rie6r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_sh88d")
}],
"loop": true,
"name": &"bone_pile",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wgj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg42q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vgq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3r4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmq2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srww6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0cfw")
}],
"loop": false,
"name": &"bone_pile_wakeup",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nrdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g15cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkdin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8abc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt6ae")
}],
"loop": false,
"name": &"bone_toss",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogqsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgdo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egyty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prq5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n48qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8xwd")
}],
"loop": false,
"name": &"crumbling_into_bone_pile",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpjx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gksni")
}],
"loop": false,
"name": &"hurt",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_gku70")
}],
"loop": true,
"name": &"inactive",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_c6pi8")
}],
"loop": true,
"name": &"jumping",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpwgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bbc0")
}],
"loop": true,
"name": &"landed",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd8rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdklg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dfin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3k85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qldq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abw3f")
}],
"loop": true,
"name": &"limping_movement",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61cp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7q35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwspo")
}],
"loop": true,
"name": &"preparing_jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_nnwmq")
}],
"loop": true,
"name": &"standing",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lux7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmt0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31dwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jie8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcrbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1gsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m76hx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5k40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6dtu")
}],
"loop": true,
"name": &"standing_idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssyro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha5y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82yh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rsg7")
}],
"loop": true,
"name": &"twitching_idle",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ox45l"]
radius = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tctgg"]
size = Vector2(9, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_sh88d"]
radius = 155.00322

[node name="skeleton" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 39
script = ExtResource("1_d56fl")

[node name="SFX_Throw" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_pyp1f")
volume_db = -10.0
bus = &"SFX"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_rie6r")
animation = &"bone_pile"

[node name="CollisionShape2D Top" type="CollisionShape2D" parent="."]
position = Vector2(2, -2)
shape = SubResource("CircleShape2D_ox45l")

[node name="CollisionShape2D Bottom" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 8)
shape = SubResource("RectangleShape2D_tctgg")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_sh88d")
debug_color = Color(0.60619044, 0.5186164, 0.43381742, 0.41960785)

[node name="AttackTimer" type="Timer" parent="."]

[node name="EdgeDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 40)
collision_mask = 2

[node name="SFX_Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_obgqe")
volume_db = -10.0
bus = &"SFX"
